# memlint

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  stale-detector-spec.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-07-stale-detector.md
examples/: basic_usage.py  langchain_integration.py  sample_memories.json
memlint/: __init__.py  classifier.py  cli.py  core.py  models.py  scorer.py  utils.py
memlint/adapters/: _utils.py  json_adapter.py  langchain_tool.py  mem0_adapter.py
stale_detector/: __init__.py  classifier.py  cli.py  core.py  models.py  scorer.py
stale_detector/adapters/: json_adapter.py  langchain_tool.py  mem0_adapter.py
tests/: test_adapters.py  test_classifier.py  test_confirm_and_export.py  test_core.py  test_models.py  test_scorer.py  test_semantic_contradiction.py  test_utils.py
tests/fixtures/: sample.json  sample_mem0.json
