[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memlint"
version = "0.1.0"
description = "Detect stale facts in LLM agent memory stores"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Bhavye", email = "bhavyedevelopment2003@gmail.com" }
]
keywords = [
    "llm", "rag", "vector-database", "langchain", "langgraph", "mem0",
    "agent", "memory", "staleness", "ai", "nlp", "pinecone", "qdrant",
    "chroma", "weaviate", "pgvector", "memlint"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
memlint = "memlint.cli:main"

[project.urls]
Homepage = "https://github.com/Bhavye2003Developer/memlint"
Issues = "https://github.com/Bhavye2003Developer/memlint/issues"
